fix: mark as delivered